# multi-robot-semantic-slam

./: .gitignore  README.md  requirements.txt  setup_workspace.sh  test_semantic_fleet.sh
src/semantic_fleet/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/semantic_fleet/config/: semantic_params.yaml
src/semantic_fleet/launch/: single_robot_semantic.launch.py  test_with_turtlebot3.launch.py  warehouse_semantic_slam.launch.py
src/semantic_fleet/msg/: DetectedObject.msg  DetectedObjects.msg  SemanticMap.msg
src/semantic_fleet/semantic_fleet/: object_localizer.py  semantic_mapper.py  yolo_detector.py
src/semantic_fleet/worlds/: warehouse.world
